# alpha-forge

./: .env  .env.cred  .env.cred.example  .env.port  .gitattributes  .gitignore  .graphifyignore  .mcp.json  .npmrc  CLAUDE.md  Makefile  PLAN.md  Procfile  README.md  clean.sh  cspell.json  docker-compose.yml  implement.txt  jupytext.toml  justfile  pnpm-lock.yaml  pyproject.toml  setup-config.sh  setup.sh
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
backend/: .env  .env.example  .pdm-python  API_README.md  Dockerfile  PLAN_memory.md  alembic.ini  implement.txt  implement_memory.txt  pdm.toml  pip.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 640eee61bc50_initial_schema_with_pgvector_memory.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  env_loader.py  logging.py  security.py
backend/app/models/: __init__.py
backend/app/modules/: __init__.py
backend/app/modules/ai/: __init__.py  ai_helper.py  ai_routes.py  ai_schemas.py  ai_service.py  ai_utils.py  routes.py  service.py
backend/app/modules/auth/: __init__.py  models.py
backend/app/modules/brokers/: __init__.py  _cdp.py  _csv_helper.py  _http.py  _legacy_zerodha.py  _otp.py  aggregator.py  aggregator_types.py  angel_one.py  angel_one_helper.py  base.py  broker_schemas.py  brokers_routes.py  csv_sources.py  dezerv_csv.py  groww.py  groww_csv.py  groww_helper.py  groww_mapper.py  registry.py  source.plan.md  treemap_helper.py  wint_wealth.py  wint_wealth_csv.py  wint_wealth_helper.py  zerodha_coin.py  zerodha_coin_csv.py  zerodha_csv.py  zerodha_dump.py  zerodha_kite.py  zerodha_kite_helper.py
backend/app/modules/dashboard/: __init__.py  dashboard_routes.py  dashboard_schemas.py  dashboard_seed.py  routes.py
backend/app/modules/health/: __init__.py
backend/app/modules/llm/: __init__.py  benchmark_routes.py  llm_routes.py  llm_schemas.py  routes.py
backend/app/modules/market/: __init__.py  routes.py
backend/app/modules/memory/: embedding.py  embedding_service.py  embedding_utils.py  memory_helper.py  memory_repo.py  memory_service.py  memory_utils.py  models.py  service.py
backend/app/modules/portfolio/: __init__.py  models.py  otp_routes.py  portfolio_routes.py  routes.py  sources_helper.py  sources_routes.py
backend/app/modules/screener/: __init__.py  routes.py  screener_helper.py  screener_routes.py  screener_schemas.py
backend/app/modules/trade/: __init__.py  routes.py
backend/app/routes/: __init__.py  ai.py  auth.py  health.py  llm.py  market.py  portfolio.py  screener.py  trade.py
backend/app/services/: ai_service.py  broker_base.py  broker_zerodha.py  llm_gateway.py  market_data.py  memory.py  screener.py
backend/app/services/brokers/: __init__.py  aggregator.py  angel_one.py  csv_sources.py  registry.py
backend/docs/: BROKERS.md
backend/notebooks/: portfolio_dev.ipynb  portfolio_dev.py
backend/scripts/: dev_brokers.py
backend/tests/: test_brokers.py  test_health.py
backend/tests/fixtures/broker_csvs/: dezerv_holdings.csv  groww_mf.csv  groww_stocks.csv  wint_wealth_holdings.csv  zerodha_coin_holdings.csv  zerodha_holdings.csv
convention/: README.md  python.md  typescript.md  violations.md
database/: db.sh  setup-local.sh
design/: DESIGN_SYSTEM.md  GEMINI_STITCH.md  README.md
design/hifi/: Alpha Forge Hi-Fi.v1.html
design/legacy/hifi/: Alpha Forge Hi-Fi.v1.html
design/legacy/terminal aka landing page/light/: DESIGN.md
design/project/: Alpha Forge Hi-Fi.html  Alpha Forge Wireframes.html
design/project/uploads/: code-1672048b.html  code-7ad06dae.html  code-f003bf60.html  code.html
docs/: GETTING_STARTED.md  HOW.md  WHAT.md  WHY.md
frontend/: .env.example  .env.local  Dockerfile  biome.json  eslint.config.mjs  implement.txt  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/: module.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/components/ai/: AIChat.tsx
frontend/src/components/dashboard/: MarketOverview.tsx  Watchlist.tsx
frontend/src/lib/: api.ts  logger.ts  providers.tsx  queries.ts  store.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
infra/: docker-compose.yml  setup-local.sh
llm-gateway/: PLAN.md  README.md  implement.txt  pyproject.toml
llm-gateway/notebooks/: llm_gateway_playground.ipynb  llm_gateway_playground.py
llm-gateway/src/alphaforge_llm_gateway/: __init__.py  __main__.py  base.py  benchmark.py  cli.py  cost_guard.py  gateway.py  prompts.py  rate_limiter.py  router.py  types.py
llm-gateway/src/alphaforge_llm_gateway/benchmark_data/: rubrics.json  screener_output.txt  shap_explanation.txt
llm-gateway/src/alphaforge_llm_gateway/providers/: __init__.py  gemini.py  groq.py  huggingface.py  ollama.py  openrouter.py
mcp/: PLAN.md  README.md  implement.txt  pyproject.toml
mcp/src/alphaforge_repo_context/: __init__.py  chunker.py  config.py  db.py  embeddings.py  indexer.py  server.py  watcher.py
mcp/src/alphaforge_repo_context/tools/: get_symbol.py  module_overview.py  read_file_range.py  recent_changes.py  search_code.py
screener/: .gitignore  PLAN.md  __init__.py  config.py  implement.txt  pyproject.toml  requirements.txt
screener/backtest/: __init__.py  engine.py  metrics.py  report.py
screener/data/: __init__.py  fetch_nse_data.py  fetch_ohlcv.py  fetch_universe.py
screener/dataset/: __init__.py  build_dataset.py  labeler.py
screener/features/: __init__.py  build_features.py  fundamental.py  nse_features.py  relative_strength.py  technical.py
screener/live/: __init__.py  explain.py  retrain.py  scan.py
screener/models/: __init__.py  baseline_rules.py  feature_importance.py  train_lightgbm.py  train_xgboost.py  walk_forward.py
screener/notebooks/: screener_pipeline.ipynb  screener_pipeline.py
structure/: README.md
structure/backend/: files.md  variables.md
structure/frontend/: files.md  variables.md
structure/llm-gateway/: files.md  variables.md
structure/screener/: files.md  variables.md
(+70 files in other folders)
