[project]
name = "alphaforge-backend"
version = "0.1.0"
description = "AlphaForge — AI-powered financial analysis and trading platform"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Arpit Arya" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    # Internal packages (resolved via [tool.uv.sources] in the workspace root)
    "alphaforge-logger",
    "alphaforge-llm-gateway",
    # Indian broker SDKs
    "kiteconnect>=5.0.0",
    # Browser automation (broker web logins that block headless httpx)
    "playwright>=1.47.0",
    # Data & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.32",
    # AI / ML
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Vector DB
    "pgvector>=0.3.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",  # for test client
    "debugpy>=1.8.0",  # remote debugger for VS Code "Backend: Attach"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.resolution]
installer = "uv"
resolver = "uv"

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest -v --tb=short"
lint = { composite = ["ruff check .", "ruff format --check ."] }
format = "ruff format ."
migrate = "alembic upgrade head"
revision = "alembic revision --autogenerate -m"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]
