[project]
name = "alphaforge-llm-gateway"
version = "0.1.0"
description = "Free multi-provider LLM gateway for AlphaForge — unified async interface with smart routing"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Arpit Arya" }]

dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest -v --tb=short"
lint = { composite = ["ruff check .", "ruff format --check ."] }
format = "ruff format ."

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
