[project]
name = "alphaforge-repo-context-mcp"
version = "0.1.0"
description = "Tool-agnostic MCP server that gives coding agents (Claude, Copilot, Cursor, etc.) semantic + structural context over the AlphaForge repo"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Arpit Arya" }]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "watchfiles>=0.22.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
alphaforge-repo-context-mcp = "alphaforge_repo_context.server:main"
alphaforge-repo-context-index = "alphaforge_repo_context.indexer:cli_main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
serve = "python -m alphaforge_repo_context.server"
index = "python -m alphaforge_repo_context.indexer"
test = "pytest -v --tb=short"
lint = { composite = ["ruff check .", "ruff format --check ."] }
format = "ruff format ."

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101", "S608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
